syntax = "proto3";

package international_center.common;

option csharp_namespace = "InternationalCenter.Shared.Proto.Common";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

// Common base entity for all domain entities
message BaseEntity {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
}

// Pagination request parameters
message PaginationRequest {
  int32 page = 1;
  int32 page_size = 2;
}

// Pagination response metadata
message PaginationResponse {
  int32 page = 1;
  int32 page_size = 2;
  int64 total = 3;
  int32 total_pages = 4;
}

// Standard sort options
message SortOptions {
  string sort_by = 1;
  SortDirection direction = 2;
}

enum SortDirection {
  ASC = 0;
  DESC = 1;
}

// Generic filter for category-based entities
message CategoryFilter {
  google.protobuf.StringValue category = 1;
  google.protobuf.BoolValue featured = 2;
}

// Search request parameters
message SearchRequest {
  string query = 1;
  PaginationRequest pagination = 2;
  SortOptions sort = 3;
  CategoryFilter filter = 4;
}

// Health check messages
message HealthCheckRequest {}

message HealthCheckResponse {
  HealthStatus status = 1;
  string service_name = 2;
  string version = 3;
  google.protobuf.Timestamp timestamp = 4;
  map<string, string> details = 5;
}

enum HealthStatus {
  UNKNOWN = 0;
  SERVING = 1;
  NOT_SERVING = 2;
  SERVICE_UNKNOWN = 3;
}

// Error details for consistent error handling
message ErrorDetail {
  string code = 1;
  string message = 2;
  string field = 3;
}

// Status response for operations
message OperationStatus {
  bool success = 1;
  string message = 2;
  repeated ErrorDetail errors = 3;
}